# DobbyWithQBDI

./: .gitmodules  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/f/qbdi/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/f/qbdi/: MainActivity.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/f/qbdi/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
nativelib/: build.gradle
nativelib/src/androidTest/java/com/f/nativelib/: ExampleInstrumentedTest.java
nativelib/src/main/cpp/: CMakeLists.txt  nativelib.cpp  vm.cpp
nativelib/src/main/cpp/hook/: HookUtils.cpp  HookUtils.h  linkerHandler.cpp  linkerHandler.h
nativelib/src/main/cpp/include/: logger.h  nativelib.h  version.h  vm.h
nativelib/src/main/cpp/record/: HookInfo.cpp  HookInfo.h  fileRecord.cpp  fileRecord.h
nativelib/src/main/cpp/utils/: json.hpp  jsonbean.cpp  jsonbean.h  mongoose.c  mongoose.h  socketUtils.cpp  socketUtils.h
nativelib/src/main/java/com/f/nativelib/: NativeLib.java
nativelib/src/test/java/com/f/nativelib/: ExampleUnitTest.java
